--- a/flavor.toml
+++ b/flavor.toml
@@ -1,20 +1,4 @@
-# If the user's terminal is in dark mode, Yazi will load `theme-dark.toml` on startup; otherwise, `theme-light.toml`.
-# You can override any parts of them that are not related to the dark/light mode in your own `theme.toml`.
-
-# If you want to dynamically override their content based on dark/light mode, you can specify two different flavors
-# for dark and light modes under `[flavor]`, and do so in those flavors instead.
-"$schema" = "https://yazi-rs.github.io/schemas/theme.json"
-
 # vim:fileencoding=utf-8:foldmethod=marker
-
-# : Flavor {{{
-
-[flavor]
-dark  = ""
-light = ""
-
-# : }}}
-
 
 # : Manager {{{
 
@@ -91,11 +75,11 @@ sep_left  = { open = "", close = "" }
 sep_right = { open = "", close = "" }
 
 # Permissions
-perm_sep   = { fg = "darkgray" }
-perm_type  = { fg = "green" }
-perm_read  = { fg = "yellow" }
-perm_write = { fg = "red" }
-perm_exec  = { fg = "cyan" }
+perm_sep   = { fg = "#585858" }
+perm_type  = { fg = "#00afff" }
+perm_read  = { fg = "#dadada" }
+perm_write = { fg = "#ff0087" }
+perm_exec  = { fg = "#00af87" }
 
 # Progress
 progress_label  = { bold = true }
