Set archive extension colors in [icon]

--- a/flavor.toml
+++ b/flavor.toml
@@ -448,7 +448,7 @@ files = [
 exts = [
 	{ name = "3gp", text = "", fg = "#fd971f" },
 	{ name = "3mf", text = "󰆧", fg = "#888888" },
-	{ name = "7z", text = "", fg = "#eca517" },
+	{ name = "7z", text = "", fg = "#8700ff" },
 	{ name = "a", text = "", fg = "#dcddd6" },
 	{ name = "aac", text = "", fg = "#00afff" },
 	{ name = "ada", text = "", fg = "#599eff" },
@@ -484,9 +484,9 @@ exts = [
 	{ name = "bmp", text = "", fg = "#a074c4" },
 	{ name = "bqn", text = "", fg = "#24a148" },
 	{ name = "brep", text = "󰻫", fg = "#839463" },
-	{ name = "bz", text = "", fg = "#eca517" },
-	{ name = "bz2", text = "", fg = "#eca517" },
-	{ name = "bz3", text = "", fg = "#eca517" },
+	{ name = "bz", text = "", fg = "#8700ff" },
+	{ name = "bz2", text = "", fg = "#8700ff" },
+	{ name = "bz3", text = "", fg = "#8700ff" },
 	{ name = "bzl", text = "", fg = "#89e051" },
 	{ name = "c", text = "", fg = "#599eff" },
 	{ name = "c++", text = "", fg = "#f34b7d" },
@@ -610,7 +610,7 @@ exts = [
 	{ name = "graphql", text = "", fg = "#e535ab" },
 	{ name = "gresource", text = "", fg = "#ffffff" },
 	{ name = "gv", text = "󱁉", fg = "#30638e" },
-	{ name = "gz", text = "", fg = "#eca517" },
+	{ name = "gz", text = "", fg = "#8700ff" },
 	{ name = "h", text = "", fg = "#a074c4" },
 	{ name = "haml", text = "", fg = "#eaeae1" },
 	{ name = "hbs", text = "", fg = "#f0772b" },
@@ -782,7 +782,7 @@ exts = [
 	{ name = "r", text = "󰟔", fg = "#2266ba" },
 	{ name = "R", text = "󰟔", fg = "#2266ba" },
 	{ name = "rake", text = "", fg = "#701516" },
-	{ name = "rar", text = "", fg = "#eca517" },
+	{ name = "rar", text = "", fg = "#8700ff" },
 	{ name = "razor", text = "󱦘", fg = "#512bd4" },
 	{ name = "rb", text = "", fg = "#701516" },
 	{ name = "res", text = "", fg = "#cc3e44" },
@@ -862,7 +862,7 @@ exts = [
 	{ name = "tex", text = "", fg = "#3d6117" },
 	{ name = "tf", text = "", fg = "#5f43e9" },
 	{ name = "tfvars", text = "", fg = "#5f43e9" },
-	{ name = "tgz", text = "", fg = "#eca517" },
+	{ name = "tgz", text = "", fg = "#8700ff" },
 	{ name = "tmpl", text = "", fg = "#dbbd30" },
 	{ name = "tmux", text = "", fg = "#14ba19" },
 	{ name = "toml", text = "", fg = "#9c4221" },
@@ -875,7 +875,7 @@ exts = [
 	{ name = "ttf", text = "", fg = "#ececec" },
 	{ name = "twig", text = "", fg = "#8dc149" },
 	{ name = "txt", text = "󰈙", fg = "#89e051" },
-	{ name = "txz", text = "", fg = "#eca517" },
+	{ name = "txz", text = "", fg = "#8700ff" },
 	{ name = "typ", text = "", fg = "#0dbcc0" },
 	{ name = "typoscript", text = "", fg = "#ff8700" },
 	{ name = "ui", text = "", fg = "#015bf0" },
@@ -913,13 +913,13 @@ exts = [
 	{ name = "xml", text = "󰗀", fg = "#e37933" },
 	{ name = "xpi", text = "", fg = "#ff1b01" },
 	{ name = "xul", text = "", fg = "#e37933" },
-	{ name = "xz", text = "", fg = "#eca517" },
+	{ name = "xz", text = "", fg = "#8700ff" },
 	{ name = "yaml", text = "", fg = "#6d8086" },
 	{ name = "yml", text = "", fg = "#6d8086" },
 	{ name = "zig", text = "", fg = "#f69a1b" },
-	{ name = "zip", text = "", fg = "#eca517" },
+	{ name = "zip", text = "", fg = "#8700ff" },
 	{ name = "zsh", text = "", fg = "#89e051" },
-	{ name = "zst", text = "", fg = "#eca517" },
+	{ name = "zst", text = "", fg = "#8700ff" },
 	{ name = "🔥", text = "", fg = "#ff4c1f" },
 ]
 conds = [
