Set icon color of image, audio/video, archive & document files

--- a/flavor.toml
+++ b/flavor.toml
@@ -446,7 +446,7 @@ files = [
 	{ name = "xsettingsd.conf", text = "", fg = "#e54d18" },
 ]
 exts = [
-	{ name = "3gp", text = "", fg = "#fd971f" },
+	{ name = "3gp", text = "", fg = "#00afff" },
 	{ name = "3mf", text = "󰆧", fg = "#888888" },
 	{ name = "7z", text = "", fg = "#8700ff" },
 	{ name = "a", text = "", fg = "#dcddd6" },
@@ -491,7 +491,7 @@ exts = [
 	{ name = "c", text = "", fg = "#599eff" },
 	{ name = "c++", text = "", fg = "#f34b7d" },
 	{ name = "cache", text = "", fg = "#ffffff" },
-	{ name = "cast", text = "", fg = "#fd971f" },
+	{ name = "cast", text = "", fg = "#00afff" },
 	{ name = "cbl", text = "", fg = "#005ca5" },
 	{ name = "cc", text = "", fg = "#f34b7d" },
 	{ name = "ccm", text = "", fg = "#f34b7d" },
@@ -536,10 +536,10 @@ exts = [
 	{ name = "desktop", text = "", fg = "#563d7c" },
 	{ name = "diff", text = "", fg = "#41535b" },
 	{ name = "dll", text = "", fg = "#4d2c0b" },
-	{ name = "doc", text = "󰈬", fg = "#185abd" },
+	{ name = "doc", text = "󰈬", fg = "#ffffaf" },
 	{ name = "Dockerfile", text = "󰡨", fg = "#458ee6" },
 	{ name = "dockerignore", text = "󰡨", fg = "#458ee6" },
-	{ name = "docx", text = "󰈬", fg = "#185abd" },
+	{ name = "docx", text = "󰈬", fg = "#ffffaf" },
 	{ name = "dot", text = "󱁉", fg = "#30638e" },
 	{ name = "download", text = "", fg = "#44cda8" },
 	{ name = "drl", text = "", fg = "#ffafaf" },
@@ -582,7 +582,7 @@ exts = [
 	{ name = "fdmdownload", text = "", fg = "#44cda8" },
 	{ name = "feature", text = "", fg = "#00a818" },
 	{ name = "fish", text = "", fg = "#4d5a5e" },
-	{ name = "flac", text = "", fg = "#0075aa" },
+	{ name = "flac", text = "", fg = "#00afff" },
 	{ name = "flc", text = "", fg = "#ececec" },
 	{ name = "flf", text = "", fg = "#ececec" },
 	{ name = "fnl", text = "", fg = "#fff3d7" },
@@ -694,7 +694,7 @@ exts = [
 	{ name = "m3u", text = "󰲹", fg = "#ed95ae" },
 	{ name = "m3u8", text = "󰲹", fg = "#ed95ae" },
 	{ name = "m4a", text = "", fg = "#00afff" },
-	{ name = "m4v", text = "", fg = "#fd971f" },
+	{ name = "m4v", text = "", fg = "#00afff" },
 	{ name = "magnet", text = "", fg = "#a51b16" },
 	{ name = "makefile", text = "", fg = "#6d8086" },
 	{ name = "markdown", text = "", fg = "#dddddd" },
@@ -705,16 +705,16 @@ exts = [
 	{ name = "mint", text = "󰌪", fg = "#87c095" },
 	{ name = "mjs", text = "", fg = "#f1e05a" },
 	{ name = "mk", text = "", fg = "#6d8086" },
-	{ name = "mkv", text = "", fg = "#fd971f" },
+	{ name = "mkv", text = "", fg = "#00afff" },
 	{ name = "ml", text = "", fg = "#e37933" },
 	{ name = "mli", text = "", fg = "#e37933" },
 	{ name = "mm", text = "", fg = "#519aba" },
 	{ name = "mo", text = "", fg = "#9772fb" },
 	{ name = "mobi", text = "", fg = "#eab16d" },
 	{ name = "mojo", text = "", fg = "#ff4c1f" },
-	{ name = "mov", text = "", fg = "#fd971f" },
+	{ name = "mov", text = "", fg = "#00afff" },
 	{ name = "mp3", text = "", fg = "#00afff" },
-	{ name = "mp4", text = "", fg = "#fd971f" },
+	{ name = "mp4", text = "", fg = "#00afff" },
 	{ name = "mpp", text = "", fg = "#519aba" },
 	{ name = "msf", text = "", fg = "#137be1" },
 	{ name = "mts", text = "", fg = "#519aba" },
@@ -733,19 +733,19 @@ exts = [
 	{ name = "odp", text = "", fg = "#fe9c45" },
 	{ name = "ods", text = "", fg = "#78fc4e" },
 	{ name = "odt", text = "", fg = "#2dcbfd" },
-	{ name = "oga", text = "", fg = "#0075aa" },
-	{ name = "ogg", text = "", fg = "#0075aa" },
-	{ name = "ogv", text = "", fg = "#fd971f" },
-	{ name = "ogx", text = "", fg = "#fd971f" },
-	{ name = "opus", text = "", fg = "#0075aa" },
+	{ name = "oga", text = "", fg = "#00afff" },
+	{ name = "ogg", text = "", fg = "#00afff" },
+	{ name = "ogv", text = "", fg = "#00afff" },
+	{ name = "ogx", text = "", fg = "#00afff" },
+	{ name = "opus", text = "", fg = "#00afff" },
 	{ name = "org", text = "", fg = "#77aa99" },
 	{ name = "otf", text = "", fg = "#ececec" },
 	{ name = "out", text = "", fg = "#9f0500" },
 	{ name = "part", text = "", fg = "#44cda8" },
 	{ name = "patch", text = "", fg = "#41535b" },
 	{ name = "pck", text = "", fg = "#6d8086" },
-	{ name = "pcm", text = "", fg = "#0075aa" },
-	{ name = "pdf", text = "", fg = "#b30b00" },
+	{ name = "pcm", text = "", fg = "#00afff" },
+	{ name = "pdf", text = "", fg = "#ffffaf" },
 	{ name = "php", text = "", fg = "#a074c4" },
 	{ name = "pl", text = "", fg = "#519aba" },
 	{ name = "pls", text = "󰲹", fg = "#ed95ae" },
@@ -822,7 +822,7 @@ exts = [
 	{ name = "spec.jsx", text = "", fg = "#20c2e3" },
 	{ name = "spec.ts", text = "", fg = "#519aba" },
 	{ name = "spec.tsx", text = "", fg = "#1354bf" },
-	{ name = "spx", text = "", fg = "#0075aa" },
+	{ name = "spx", text = "", fg = "#00afff" },
 	{ name = "sql", text = "", fg = "#dad8d8" },
 	{ name = "sqlite", text = "", fg = "#dad8d8" },
 	{ name = "sqlite3", text = "", fg = "#dad8d8" },
@@ -891,7 +891,7 @@ exts = [
 	{ name = "vue", text = "", fg = "#8dc149" },
 	{ name = "wasm", text = "", fg = "#5c4cdb" },
 	{ name = "wav", text = "", fg = "#00afff" },
-	{ name = "webm", text = "", fg = "#fd971f" },
+	{ name = "webm", text = "", fg = "#00afff" },
 	{ name = "webmanifest", text = "", fg = "#f1e05a" },
 	{ name = "webp", text = "", fg = "#a074c4" },
 	{ name = "webpack", text = "󰜫", fg = "#519aba" },
