Set another bunch of image icon colors

--- a/flavor.toml
+++ b/flavor.toml
@@ -467,7 +467,7 @@ exts = [
 	{ name = "asm", text = "", fg = "#0091bd" },
 	{ name = "ass", text = "󰨖", fg = "#ffb713" },
 	{ name = "astro", text = "", fg = "#e23f67" },
-	{ name = "avif", text = "", fg = "#a074c4" },
+	{ name = "avif", text = "", fg = "#00afff" },
 	{ name = "awk", text = "", fg = "#4d5a5e" },
 	{ name = "azcli", text = "", fg = "#0078d4" },
 	{ name = "bak", text = "󰁯", fg = "#6d8086" },
@@ -481,7 +481,7 @@ exts = [
 	{ name = "blade.php", text = "", fg = "#f05340" },
 	{ name = "blend", text = "󰂫", fg = "#ea7600" },
 	{ name = "blp", text = "󰺾", fg = "#5796e2" },
-	{ name = "bmp", text = "", fg = "#a074c4" },
+	{ name = "bmp", text = "", fg = "#00afff" },
 	{ name = "bqn", text = "", fg = "#24a148" },
 	{ name = "brep", text = "󰻫", fg = "#839463" },
 	{ name = "bz", text = "", fg = "#8700ff" },
@@ -597,7 +597,7 @@ exts = [
 	{ name = "gcode", text = "󰐫", fg = "#1471ad" },
 	{ name = "gd", text = "", fg = "#6d8086" },
 	{ name = "gemspec", text = "", fg = "#701516" },
-	{ name = "gif", text = "", fg = "#a074c4" },
+	{ name = "gif", text = "", fg = "#00afff" },
 	{ name = "git", text = "", fg = "#f14c28" },
 	{ name = "glb", text = "", fg = "#ffb13b" },
 	{ name = "gleam", text = "", fg = "#ffaff3" },
@@ -629,7 +629,7 @@ exts = [
 	{ name = "hxx", text = "", fg = "#a074c4" },
 	{ name = "ical", text = "", fg = "#2b2e83" },
 	{ name = "icalendar", text = "", fg = "#2b2e83" },
-	{ name = "ico", text = "", fg = "#cbcb41" },
+	{ name = "ico", text = "", fg = "#00afff" },
 	{ name = "ics", text = "", fg = "#2b2e83" },
 	{ name = "ifb", text = "", fg = "#2b2e83" },
 	{ name = "ifc", text = "󰻫", fg = "#839463" },
@@ -647,15 +647,15 @@ exts = [
 	{ name = "ixx", text = "", fg = "#519aba" },
 	{ name = "java", text = "", fg = "#cc3e44" },
 	{ name = "jl", text = "", fg = "#a270ba" },
-	{ name = "jpeg", text = "", fg = "#a074c4" },
-	{ name = "jpg", text = "", fg = "#a074c4" },
+	{ name = "jpeg", text = "", fg = "#00afff" },
+	{ name = "jpg", text = "", fg = "#00afff" },
 	{ name = "js", text = "", fg = "#cbcb41" },
 	{ name = "json", text = "", fg = "#cbcb41" },
 	{ name = "json5", text = "", fg = "#cbcb41" },
 	{ name = "jsonc", text = "", fg = "#cbcb41" },
 	{ name = "jsx", text = "", fg = "#20c2e3" },
 	{ name = "jwmrc", text = "", fg = "#0078cd" },
-	{ name = "jxl", text = "", fg = "#a074c4" },
+	{ name = "jxl", text = "", fg = "#00afff" },
 	{ name = "kbx", text = "󰯄", fg = "#737672" },
 	{ name = "kdb", text = "", fg = "#529b34" },
 	{ name = "kdbx", text = "", fg = "#529b34" },
@@ -751,7 +751,7 @@ exts = [
 	{ name = "pls", text = "󰲹", fg = "#ed95ae" },
 	{ name = "ply", text = "󰆧", fg = "#888888" },
 	{ name = "pm", text = "", fg = "#519aba" },
-	{ name = "png", text = "", fg = "#a074c4" },
+	{ name = "png", text = "", fg = "#00afff" },
 	{ name = "po", text = "", fg = "#2596be" },
 	{ name = "pot", text = "", fg = "#2596be" },
 	{ name = "pp", text = "", fg = "#ffa61a" },
@@ -893,7 +893,7 @@ exts = [
 	{ name = "wav", text = "", fg = "#00afff" },
 	{ name = "webm", text = "", fg = "#00afff" },
 	{ name = "webmanifest", text = "", fg = "#f1e05a" },
-	{ name = "webp", text = "", fg = "#a074c4" },
+	{ name = "webp", text = "", fg = "#00afff" },
 	{ name = "webpack", text = "󰜫", fg = "#519aba" },
 	{ name = "wma", text = "", fg = "#00afff" },
 	{ name = "woff", text = "", fg = "#ececec" },
